--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,8 @@
 PORT=6000
-DB_NAME=********
-DB_USER=********
-DB_PASSWORD=*********
-DB_HOST=********
-DB_PORT=****
-REDIS_URL=redis://redis:6379
+DB_NAME=redisRating
+DB_USER=postgres
+DB_PASSWORD=postgres
+DB_HOST=localhost
+DB_PORT=5432
+
 API_PORT=9000
